Update to 1.20.5 (#277)
* update loom

* update gradle wrapper

* update to 1.20.5

* update java in workflow

* update java in build.gradle

* update fabric-permissions-api

* fix running the run tasks

* woops, guess that was used by the ec-core tests

moved them over to real junit, not that we run tests anyway, minecraft doesn't like that anymore

* make nicks parse tags

assumptions were made, placeholders seemed out of place here, so now its QuickText
should these assumptions be correct, the permission node probably also needs a rename